--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,82 @@
-*{
-    margin: 0;
-    padding: 0;
-    color: white;
+* {
+  margin: 0;
+  padding: 0;
+  color: white;
 }
 
-body{
-    background-color: grey;
+body {
+  background-color: grey;
 }
 
-.phone-book{
-    max-width: 370px;
-    height: 600px;
-    width: 100%;
-    background: black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /*border-radius: 20px;*/
-    border: 3px solid #c5c0c0;
-    overflow-x: hidden;
-    overflow-y: scroll;
-
+.phone-book {
+  max-width: 370px;
+  height: 600px;
+  width: 100%;
+  background: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /*border-radius: 20px;*/
+  border: 3px solid #c5c0c0;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
-
-.navbar{
-    width: 100%;
+.navbar {
+  width: 100%;
 }
 
-.navbar-add-contact{
-    width: 20px;
-    transform: rotate(45deg);
+.navbar-add-contact {
+  width: 20px;
+  transform: rotate(45deg);
 }
 
-.navbar-toggler-cast{
-    border: none;
+.navbar-toggler-cast {
+  border: none;
 }
 
-.navbar-toggler-cast:focus{
-    box-shadow: none;
+.navbar-toggler-cast:focus {
+  box-shadow: none;
 }
 
-.offcanvas-backdrop.show{
-    height: 100%;
+.offcanvas-backdrop.show {
+  height: 100%;
 }
 
-.contactHeading{
-    font-size: 21px;
-    font-weight: 600;
+.contactHeading {
+  font-size: 21px;
+  font-weight: 600;
 }
 
 .contactNumber,
-.contactJob{
-    font-weight: 100;
+.contactJob {
+  font-weight: 100;
 }
 
-.btn-int{
-    height: fit-content;
-    border: none;
-    background: transparent;
-    border: none;
-    margin-left: 10px;
+.btn-int {
+  height: fit-content;
+  border: none;
+  background: transparent;
+  border: none;
+  margin-left: 10px;
 }
 
-.btn-int > img{
-    max-width: 25px;
+.btn-int > img {
+  max-width: 25px;
 }
 
-.btn-int > img:hover{
-    opacity: .7;
+.btn-int > img:hover {
+  opacity: 0.7;
 }
 
-.contactWrapper{
-    display: block;
-    border: 1px solid transparent;
-    padding: 3px 7px;
-    border-radius: 10px;
-    transition: .3s;
-    /*cursor: pointer;*/
+.contactWrapper {
+  display: block;
+  border: 1px solid transparent;
+  padding: 3px 7px;
+  border-radius: 10px;
+  transition: 0.3s;
+  /*cursor: pointer;*/
 }
 
 /*.contactWrapper:hover{*/
@@ -86,77 +84,76 @@ body{
 /*    border-color:white;*/
 /*}*/
 
-.hide{
-    display: none !important;
+.hide {
+  display: none !important;
 }
 
-#searchInp{
-    width: 75%;
+#searchInp {
+  width: 75%;
 }
 
-.no-contacts{
-    color: silver;
-    text-align: center;
-    opacity: .5;
+.no-contacts {
+  color: silver;
+  text-align: center;
+  opacity: 0.5;
 }
 
-.modal-custom{
-    justify-content: center;
-    align-content: center;
-    overflow: hidden;
+.modal-custom {
+  justify-content: center;
+  align-content: center;
+  overflow: hidden;
 }
 /**/
-.modal.show{
-    display: flex !important;
+.modal.show {
+  display: flex !important;
 }
 
-.modal-dialog-custom{
-    width: 390px;
+.modal-dialog-custom {
+  width: 390px;
 }
 
-.modal-content-custom{
-    /*max-width: 320px;*/
-    height: 610px;
-    width: 100%;
-    border: 3px solid #c5c0c0;
+.modal-content-custom {
+  /*max-width: 320px;*/
+  height: 610px;
+  width: 100%;
+  border: 3px solid #c5c0c0;
 }
 
-.bg-black{
-    background: black;
+.bg-black {
+  background: black;
 }
 
-.modal-header-custom{
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+.modal-header-custom {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
-.modal-body-custom{
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    flex-direction: column;
-    justify-content: space-between;
+.modal-body-custom {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.label_info{
-    font-size: 24px;
+.label_info {
+  font-size: 24px;
 }
 
-.label_info > span{
-    font-size: 21px;
-    font-weight: 100;
+.label_info > span {
+  font-size: 21px;
+  font-weight: 100;
 }
 
-.noScroll{
-    overflow: hidden;
+.noScroll {
+  overflow: hidden;
 }
 
 .photoContact_info > img,
-.callContact_info > img{
-    width: 70px;
-    border-radius: 50%;
+.callContact_info > img {
+  width: 70px;
+  border-radius: 50%;
 }
 
-.btn-edit{
-    max-width: 20px !important;
+.btn-edit {
+  max-width: 20px !important;
 }
-
