--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  background-color: grey;
+  background: linear-gradient(45deg, #13547a, #80d0c7);
+  height: 100vh;
+  width: 100vh;
 }
 
 .phone-book {
@@ -17,7 +19,6 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /*border-radius: 20px;*/
   border: 3px solid #c5c0c0;
   overflow-x: hidden;
   overflow-y: scroll;
